tests/compile-fail/integration__integration__general__stackless__untyped_var.snap
---
source: tests/integration/general.rs
expression: stderr
---
error: feature not supported by format
   ┌─ <input>:28:9
   │
28 │         var x;
   │         ^^^ untyped variables not supported by format


